--- a/README.Rmd
+++ b/README.Rmd
@@ -30,3 +30,16 @@ Project aims:
 
 Attribution:
 The learning/code using the OpenStreetMap data come from this [blog](https://taraskaduk.com/posts/2021-01-18-print-street-maps/) (Reference: Kaduk (2021, Jan. 18). Taras Kaduk: Print Personalized Street Maps Using R).
+
+
+## Cleaning 
+
+The scripts to clean and tidy the bin data and OSM data and join these together as in the 'cleaning_scripts' folder.  The cleaned data is then saved in the folder 'cleaned_data'. 
+
+Notes on some of the decisions made during the cleaning process: 
+
+* Decided to concentrate on Edinburgh City Centre so did not include locations in Portobello. 
+* Gayfield Square Park, Leith Links, Princes Street Gardens East, Princes Street Gardens West are all parks so decide to remove from analysis as found visualising volume via thickness of line of street did not work well for parks (since these are filled polygons). 
+* Restalrig railway path is a cycleway on OpenStreetMap so choose to also remove. 
+
+## Cleaning 
