--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ The learning/code using the OpenStreetMap data come from this [blog](https://tar
 
 ## Cleaning 
 
-The scripts to clean and tidy the bin data and OSM data and join these together as in the 'cleaning_scripts' folder.  The cleaned data is then saved in the folder 'cleaned_data'. 
+The scripts to clean and tidy the bin data and OSM data and join these together as in the folder [cleaning_scripts](./cleaning_scripts).  The cleaned data is then saved in the folder [cleaned_data](./cleaned_data). 
 
 Notes on some of the decisions made during the cleaning process: 
 
@@ -44,10 +44,10 @@ Notes on some of the decisions made during the cleaning process:
 
 ## Analysis & visualisation
 
-There are 2 pieces of work for analysing & visualising the data (which are still works in process):
+There are 2 pieces of work for analysing & visualising the data (which are still works in process) saved in the [output folder](./output):
 
-* Markdown report with some visuals on top and bottom streets in terms of cumulative rubbish weight, spatial visualisation of streets in terms of rubbish weight and looking at the rate of change of rubbish accumulating on particular streets. 
-* Shiny app where the user can select 2 streets and compare the total weight, how the weight accumulated over time and where the streets are located spatially. The user can select for the graphs to be in kilograms or equivalent weight object (as an alternative way of conceptualising the weight of the rubbish). The app is also hosted [here]() if don't want to run the code. 
+* Markdown report [here](output/analysis_report/total_rubbish_spatial_analysis.html) with some visuals on top and bottom streets in terms of cumulative rubbish weight, spatial visualisation of streets in terms of rubbish weight and looking at the rate of change of rubbish accumulating on particular streets. 
+* Shiny app (code [here](output/shiny_app/shiny_apps.html)) where the user can select 2 streets and compare the total weight, how the weight accumulated over time and where the streets are located spatially. The user can select for the graphs to be in kilograms or equivalent weight object (as an alternative way of conceptualising the weight of the rubbish). The app is also hosted [here]() if don't want to run the code. 
 
 ### Some output from the report 
 
@@ -69,7 +69,7 @@ There are 2 pieces of work for analysing & visualising the data (which are still
 
 </center>
 
-![](output/analysis_report/plot_images/top_street_objects.png){ width=10% height=10% }
+![](output/analysis_report/plot_images/top_street_objects.png)
 
 3. 'Base' map highlighting which streets have sensor bins.
 ![](output/analysis_report/plot_images/streets_highlighted.png)
